Почти идеальное решение задачи на CompletableFuture